Sometimes in a dupligroup linked actuators are not triggered #45428

Closed
opened 2015-07-14 17:53:41 +02:00 by Dalai Felinto · 7 comments

System Information
OSX 10.9.5

Blender Version
Broken: 2.75
Working: 2.74 (not 100% sure, but so far I can't reproduce this there at least with my simple file)

Short description of error
Sometimes in a dupligroup linked actuators are not triggered

Exact steps for others to reproduce the error

Bug: sometimes things work well, but often the object "B" is stuck in state "1".

The states are just to illustrate what is going on, basically (sometimes) the linked controller from one of the objects doesn't trigger one of the linked actuators when both are part of the same dupli group.

**System Information** OSX 10.9.5 **Blender Version** Broken: 2.75 Working: 2.74 (not 100% sure, but so far I can't reproduce this there at least with my simple file) **Short description of error** Sometimes in a dupligroup linked actuators are not triggered **Exact steps for others to reproduce the error** * Open: [bge-dupligroups-linked-logic-bricks.blend](https://archive.blender.org/developer/F206908/bge-dupligroups-linked-logic-bricks.blend) * Run the game in layer 1, and all works well. (notice that the object "B" quickly switches its state from "1" to "2") * Now go to layer 2 and run the game. Bug: sometimes things work well, but often the object "B" is stuck in state "1". The states are just to illustrate what is going on, basically (sometimes) the linked controller from one of the objects doesn't trigger one of the linked actuators when both are part of the same dupli group.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Porteries Tristan was assigned by Dalai Felinto 2015-07-14 21:00:02 +02:00
Author
Owner

Added subscriber: @panzergame

Added subscriber: @panzergame
Author
Owner

@panzergame this bug was introduced with your cleanup commit below:

371e5f25
3d658bf7

I'll revert your commits for now. Too bad this wasn't caught before 2.75 release :/

@panzergame this bug was introduced with your cleanup commit below: 371e5f25 3d658bf7 I'll revert your commits for now. Too bad this wasn't caught before 2.75 release :/
Author
Owner

Actually I will wait a day before reverting them since 5dc22fbbf was added after the cleanup came in and @panzergame may want a more elegant fix. Do you have the time to handle this?

Actually I will wait a day before reverting them since 5dc22fbbf was added after the cleanup came in and @panzergame may want a more elegant fix. Do you have the time to handle this?

This issue was referenced by c8f6313487

This issue was referenced by c8f6313487dfbbee030c6796220cc0d91228d658
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45428
No description provided.